# censorate

./: .env.example  .gitignore  AI_AGENT_ARCHITECTURE_REVIEW.md  CLAUDE.md  Censorate_产品文档.md  FRONTEND_DEPENDENCIES_CHECK.md  PROJECT_STATUS.md  PROJECT_STRUCTURE_VERIFICATION.md  STRATOS_AI_AGENTS_IMPLEMENTATION_SUMMARY.md  backend-implementation-guide.md  check_db_schema.py  check_skill_files.py  check_skills.py  design.md  docker-compose.yml  fix_agent_api_key.py  fix_agent_key_sqlite.py  frontend-architecture-review.md  index.html  product-doc.md  project-overview.md  run.sh  send_test_webhook.py  setup-stitch-mcp.sh  test_agent.py  test_skills.py  test_webhook.py
censorate-system/: .env.example  .gitignore  README.md  TEST_CHECKLIST.md  docker-compose.yml  e2e-test-plan.md  hermes_test_payload.json  pytest.ini  requirements.txt  run_server.py  start.sh
censorate-system/backend/: .env.example  Dockerfile  MINIO_SETUP.md  add_current_user.py  add_history_to_existing.py  add_testuser.py  check_agent_status.py  check_data.py  database.py  (+39 more)
docs/: PROJECT_STRUCTURE_REVIEW.md  ai-agents-implementation-guide.md  backend-design.md  backlog.html  frontend-design.md  frontend-implementation-guide.md  kanban.html  landing.html  login.html  requirement-enhancement-summary.md  tdd-guidelines.md  technical-architecture.md  test-assessment.md  test-strategy.md  ux-design.md
plugin/: README.md  pyproject.toml
plugin/src/censorate_hermes_plugin/: api_client.py  cli.py  config.py  plugin.py  syncer.py
stratos-system/: .env.example  README.md  docker-compose.yml  run_server.py
(+332 files in other folders)
